--- a/HiemMauNhanDao/HiemMauNhanDao/Areas/Admin/Views/chiTietDHM/Index2.cshtml
+++ b/HiemMauNhanDao/HiemMauNhanDao/Areas/Admin/Views/chiTietDHM/Index2.cshtml
@@ -85,7 +85,7 @@
             @{ var i = 1;}
             @foreach (var item in Model)
             {
-                if (item.trangThai == false)
+                if (item.trangThai == true)
                 {
                     <tr class="text-center">
                         <td>
