--- a/HiemMauNhanDao/HiemMauNhanDao/Views/Home/HuongDan.cshtml
+++ b/HiemMauNhanDao/HiemMauNhanDao/Views/Home/HuongDan.cshtml
@@ -4,5 +4,134 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Chưa hoàn thiện</h2>
+<section class="blog_area single-post-area section_padding">
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-8 posts-list">
+                <div class="single-post">
+                    <strong>
+                        Quy trình tạo đợt hiến máu
+                    </strong>
+                    <div class="feature-img">
+                        <img class="card-img rounded-0" src="~/Assets/client/sodo/4.png" alt="">
+                    </div>
 
+
+                </div>
+                <div class="single-post"style="margin-top:20px">
+                    <strong >
+                        Quy trình tạo đợt tổ chức hiến máu (bài đăng)
+                    </strong>
+                    <div class="feature-img">
+                        <img class="card-img rounded-0" src="~/Assets/client/sodo/5.png" alt="">
+                    </div>
+
+
+                </div>
+                <div class="single-post">
+                    <strong>
+                        Sơ đồ hoạt động tạo đợt hiến máu
+                    </strong>
+                    <div class="feature-img">
+                        <img class="card-img rounded-0" src="~/Assets/client/sodo/1.png" alt="">
+                    </div>
+                    @*<div class="blog_details">
+
+                <ul class="blog-info-link mt-3 mb-4">
+                    <li><a href="#"> <b style="color:black">  Thời gian tổ chức:</b> </a></li>
+                    <li><a href="#"><i class="far fa-user"></i>   Nội dung  </a></li>
+
+                </ul>
+                <div class="quote-wrapper">
+                    Thông tin
+                    <div class="quotes">
+
+                        <table>
+                            <tr>
+                                <th>
+                                    <a>Nội dung: </a>
+                                </th>
+                            </tr>
+                            <tr>
+                                <th>
+                                    <a>Đối tượng thamg gia: </a>
+                                </th>
+                            </tr>
+                            <tr>
+                                <th>
+                                    <a>Số lượng: </a>
+                                </th>
+                            </tr>
+                            <tr>
+                                <th>
+                                    <a>Địa chỉ tổ chức: </a>
+                                </th>
+                            </tr>
+
+
+                            <tr>
+                                <th>
+                                    <a>Thời gian đăng ký: </a>
+                                </th>
+                            </tr>
+                            <tr>
+                                <th>
+                                    <a>Từ ngày: </a>
+                                    <a>- Đến ngày: </a>
+                                </th>
+                            </tr>
+
+                            <tr>
+                                <th>
+                                    <a>Người đăng bài: </a>
+                                </th>
+                            </tr>
+                            <tr>
+                                <th>
+                                    <a>Đơn vị thực hiện: </a>
+                                    <a>- Số điện thoại: </a>
+
+                                </th>
+                            </tr>
+                            <tr>
+                                <th>
+                                    <a>Đơn vị liên kết: </a>
+                                    <a>- Số điện thoại: </a>
+                                </th>
+                            </tr>
+                        </table>
+                    </div>
+                </div>
+            </div>*@
+
+                </div>
+
+            </div>
+            <div class="col-lg-4">
+                <div class="blog_right_sidebar">
+                    <aside class="single_sidebar_widget search_widget">
+                        <form action="#">
+                            <div class="form-group">
+                                <div class="input-group mb-3">
+                                    <input type="text" class="form-control" placeholder='Search Keyword'
+                                           onfocus="this.placeholder = ''"
+                                           onblur="this.placeholder = 'Nhập nội dung'">
+                                    <div class="input-group-append">
+                                        <button class="btn" type="button"><i class="ti-search"></i></button>
+                                    </div>
+                                </div>
+                            </div>
+                            <button class="button rounded-0 primary-bg text-white w-100 btn_1"
+                                    type="submit">
+                                Tìm kiếm
+                            </button>
+                        </form>
+                    </aside>
+
+               
+
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
