--- a/HiemMauNhanDao/HiemMauNhanDao/Views/Shared/_Layout.cshtml
+++ b/HiemMauNhanDao/HiemMauNhanDao/Views/Shared/_Layout.cshtml
@@ -165,7 +165,7 @@
                         <ul>
                             <li><a href="#">Tìm nguồn máu</a></li>
                             <li><a href="#">Khám sức khỏe tổng quát</a></li>
-                            <li><a href="/Admin/Login/Index">Dịch vụ khác</a></li>
+                            <li><a href="/Admin/Login/Index">Trang admin</a></li>
                         </ul>
                     </div>
                     <div class="col-xl-3 col-sm-6 col-md-6 single-footer-widget">
