--- a/HiemMauNhanDao/HiemMauNhanDao/Areas/Admin/Views/Login/Index.cshtml
+++ b/HiemMauNhanDao/HiemMauNhanDao/Areas/Admin/Views/Login/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿@model HiemMauNhanDao.Models.LoginModel
 @{
+    ViewBag.Title = "Đăng nhập";
     Layout = null;
 }
 <!DOCTYPE html>
@@ -10,7 +11,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;1,100;1,200;1,300;1,400&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="~/Assets/Login/style.css">
     <link rel="icon" href="~/Assets/Login/img/favoicon.png">
-    <title>Login Form</title>
+    <title>Đăng nhập</title>
 </head>
 <body>
     @using (Html.BeginForm("Index", "Login", FormMethod.Post))
