--- a/HiemMauNhanDao/HiemMauNhanDao/Views/DotToChucHM/TaoNV.cshtml
+++ b/HiemMauNhanDao/HiemMauNhanDao/Views/DotToChucHM/TaoNV.cshtml
@@ -35,12 +35,13 @@
                     <h3>Nhiệm Vụ</h3>
                     <div class=" ">
                         <hr />
-                        @using (Html.BeginForm("TaoNV", "DotToChucHM", FormMethod.Post, new { @enctype = "multipart/form-data" }))
+                        @using (Html.BeginForm("TaoNV", "DotToChucHM", FormMethod.Post))
                         {
                             <div class="row">
                                 <div class="col-lg-12 col-md-8">
                                     @Html.AntiForgeryToken()
                                     @Html.ValidationSummary(false, "", new { @class = "text-danger" })
+                                    @Html.HiddenFor(model => model.idDTCHM)
                                     <div class="panel-body">
                                         @if (TempData["AlertMessage"] != null)
                                         {
@@ -77,6 +78,9 @@
                                         <div class="text-center " style="margin-top:20px">
                                             <input type="submit" value="Chấp nhận" class="genric-btn info-border radius" />
                                         </div>
+
+                                        @*@Html.ActionLink("Chấp nhận", "TaoNV", "DotToChucHM", new { id = Model.idDTCHM, idBaiDang = Model.idDTCHM }, new { @class = "genric-btn info radius" })*@
+
                                     }
 
                                 </div>
